--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -500,7 +500,7 @@ section:not(#about) h2.framed-subtitle {
   box-shadow: 0 0 6px #7fe1ff, inset 0 0 8px rgba(57, 255, 20, 0.2);
 }
 
-#about h3 {
+#about h3, p {
   text-align: left !important;
 }
 
