--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1984,6 +1984,7 @@ button:focus,
   color: #7fe1ff;
   opacity: 0.95;
   margin: 0 0 10px;
+  text-align: center !important
 }
 
 /* New divider (node line) */
